18Jul07=======================================================================
1. Change the meaning of set/isolate. Set/isolate now works in both directions
in that an isolated node will only have its local config remembered and will
only be sent this nodes local config. This is exactly equivalent to both
ends setting set/isolate. If that is already the case then there should be
no noticeable change. Any extra that the far node sends, over and above its
local config will now be ignored.
17Jul07=======================================================================
1. remove dupefile on startup and on ending the node. Add clear/dupefile
command to allow people to do it at runtime as well.
12Jul07=======================================================================
1. Change disconnection code so that nodes that are no longer routable are
(all) cleared out.
2. Add help for sh/band and also allow query of individual band or regions.
11Jul07=======================================================================
1. improve speed of sh/c/n
2. remove all $Id$ strings from cmd tree
09Jul07=======================================================================
1. remove check for PC93 from legacy nodes. This will allow PC10s to be
propagated correctly. Probably.
08Jul07=======================================================================
1. put in a temporary fix to the crashing on incoming PC10 talks, whilst I
try to work out how it is happening.
06Jul07=======================================================================
1. re-arrange id checking so that it is more logical and check that config
records, that can be an hour coming, are not thoughtlessly ignored, thus
causing nodes to time out.
2. Make sure that the 'over midnight' distance calculation actually does what
is required!
3. Tart up version number reporting in sh/node.
4. Pass the correct number of parameters in pc93 -> pc12 conversions which
should stop returning PC12s coming out as SYSOP announces.